# InhaASL_BFMC2025

./: .gitignore  Qualification_Video_Link.MD  README.md  main.py
Brain/: historyFile.txt  main.py
Brain/msg/: CMakeLists.txt  CarState.msg  TrafficData.msg  package.xml
Brain/src/dashboard/: processDashboard.py
Brain/src/dashboard/frontend/.angular/cache/18.2.9/dashboard/: .tsbuildinfo
Brain/src/dashboard/frontend/src/app/webSocket/: web-socket.service.ts
Brain/src/data/Semaphores/: Semaphores.py
Brain/src/data/Semaphores/threads/: threadSemaphores.py  udpListener.py
Brain/src/data/TrafficCommunication/: processTrafficCommunication.py
Brain/src/data/TrafficCommunication/threads/: tcpClient.py  threadROSTopicSubscriber.py  threadTrafficCommunicaiton.py  udpListener.py
Brain/src/data/TrafficCommunication/useful/: periodicTask.py
Brain/src/gateway/threads/: threadGateway.py
Brain/src/hardware/rosBridge/: processRosBridge.py  rosbridge.txt
Brain/src/hardware/rosBridge/threads/: threadRosBridgeRead.py  threadRosBridgeWirte.py  threadRosBridgeWrite.py
Brain/src/hardware/serialhandler/threads/: threadRead.py  threadWrite.py
Brain/src/templates/: workerprocess.py
Brain/src/utils/messages/: allMessages.py
Brain/src/utils/router/: dummyRouter.py
bfmc_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
bfmc_ws/devel/lib/inha_asl/: ackermann_odom_node
bfmc_ws/devel/lib/pkgconfig/: ackermann_cmd_mux.pc  inha_asl.pc  racecar.pc
bfmc_ws/devel/share/ackermann_cmd_mux/cmake/: ackermann_cmd_muxConfig.cmake
bfmc_ws/devel/share/inha_asl/cmake/: inha_aslConfig.cmake
bfmc_ws/devel/share/racecar/cmake/: racecarConfig.cmake
bfmc_ws/src/inha_asl/: CMakeLists.txt  package.xml
bfmc_ws/src/inha_asl/config/: ekf_config.yaml
bfmc_ws/src/inha_asl/data/: global_path.csv
bfmc_ws/src/inha_asl/launch/: .glob_pose.launch.swp  csv_path_pub.launch  csv_to_path.launch  ekf_odom.launch  glob_pose.launch  globalposepub.launch  pure_pursuit.launch
bfmc_ws/src/inha_asl/rviz/: bfmc.rviz  bfmc_bag.rviz  bfmc_fin.rviz
bfmc_ws/src/inha_asl/src/: GlobalPoseTFBroadcaster.cpp  GlobalPoseTransformer.cpp  cal_q.py  csv_to_path_node.py  ekf_odom.cpp  globalPosePub.cpp  globalTranformer.cpp  globalTransformer.cpp  global_pose_pub.cpp  global_pose_publisher1.cpp  odom_pub.cpp  pure_pursuit_ack.cpp  pure_pursuit_node.cpp  qset.txt
devel/: .catkin  local_setup.sh  setup.sh
src/hardware/rosBridge/: processRosBridge.py
src/hardware/rosBridge/threads/: threadRosBridgeRead.py  threadRosBridgeWirte.py
src/hardware/serialhandler/: processSerialHandler.py
