<?xml version="1.0"?>
<package format="2">
  <name>inha_asl</name>
  <version>0.0.1</version>
  <description>Inha ASL BFMC workspace</description>

  <maintainer email="your.email@example.com">Seeyoung Jin</maintainer>
  <license>MIT</license>

  <!-- build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ackermann_msgs</build_depend>

  <!-- run dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
</package>
