<?xml version="1.0"?>
<package format="2">
  <name>inha_asl</name>
  <version>0.0.1</version>
  <description>Inertia odometry</description>

  <maintainer email="dagonkw@gmail.com">Geonwoo Kim</maintainer>
  <license>MIT</license>

  <!-- build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>eigen3</build_depend>

  <!-- run dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>eigen3</exec_depend>
</package>